<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.asthmacare.asus.asthma.view.registrationview.RegistrationActivity">


    <TextView
        android:layout_width="wrap_content"
        android:text="Заполните,пожалуйста,все необходимые поля"
        android:textSize="20dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:hint="Фамилия"
            android:layout_width="match_parent"
            android:id="@+id/fname_editText"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:id="@+id/name_editText"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:hint="@string/middlename"
            android:layout_width="match_parent"
            android:id="@+id/sname_editText"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:hint="@string/choosesex"
            android:layout_width="match_parent"
            android:id="@+id/sex_editText"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>
    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_male"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_female" />
        <Button
            android:id="@+id/btnDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_display" />

    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:hint="Рост"
            android:layout_width="match_parent"
            android:id="@+id/growth_editText"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:hint="год-месяц-день"
            android:inputType="date"
            android:layout_width="match_parent"
            android:id="@+id/bdate_editText"
            android:ems="10"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <EditText
            android:hint="Логин"
            android:layout_width="match_parent"
            android:id="@+id/login_editText"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:layout_width="match_parent"
            android:hint="Пароль"
            android:id="@+id/password_editText"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:hint="Регистрация"
        android:id="@+id/reg_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_height="wrap_content" />

</LinearLayout>